--- a/example_codes/fluent-python-c1-data-structures.ipynb
+++ b/example_codes/fluent-python-c1-data-structures.ipynb
@@ -134,6 +134,266 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Card(rank='2', suit='Zô')\n",
+      "Card(rank='2', suit='Cơ')\n",
+      "Card(rank='2', suit='Bích')\n",
+      "Card(rank='2', suit='Tép')\n",
+      "Card(rank='3', suit='Zô')\n",
+      "Card(rank='3', suit='Cơ')\n",
+      "Card(rank='3', suit='Bích')\n",
+      "Card(rank='3', suit='Tép')\n",
+      "Card(rank='4', suit='Zô')\n",
+      "Card(rank='4', suit='Cơ')\n",
+      "Card(rank='4', suit='Bích')\n",
+      "Card(rank='4', suit='Tép')\n",
+      "Card(rank='5', suit='Zô')\n",
+      "Card(rank='5', suit='Cơ')\n",
+      "Card(rank='5', suit='Bích')\n",
+      "Card(rank='5', suit='Tép')\n",
+      "Card(rank='6', suit='Zô')\n",
+      "Card(rank='6', suit='Cơ')\n",
+      "Card(rank='6', suit='Bích')\n",
+      "Card(rank='6', suit='Tép')\n",
+      "Card(rank='7', suit='Zô')\n",
+      "Card(rank='7', suit='Cơ')\n",
+      "Card(rank='7', suit='Bích')\n",
+      "Card(rank='7', suit='Tép')\n",
+      "Card(rank='8', suit='Zô')\n",
+      "Card(rank='8', suit='Cơ')\n",
+      "Card(rank='8', suit='Bích')\n",
+      "Card(rank='8', suit='Tép')\n",
+      "Card(rank='9', suit='Zô')\n",
+      "Card(rank='9', suit='Cơ')\n",
+      "Card(rank='9', suit='Bích')\n",
+      "Card(rank='9', suit='Tép')\n",
+      "Card(rank='10', suit='Zô')\n",
+      "Card(rank='10', suit='Cơ')\n",
+      "Card(rank='10', suit='Bích')\n",
+      "Card(rank='10', suit='Tép')\n",
+      "Card(rank='J', suit='Zô')\n",
+      "Card(rank='J', suit='Cơ')\n",
+      "Card(rank='J', suit='Bích')\n",
+      "Card(rank='J', suit='Tép')\n",
+      "Card(rank='Q', suit='Zô')\n",
+      "Card(rank='Q', suit='Cơ')\n",
+      "Card(rank='Q', suit='Bích')\n",
+      "Card(rank='Q', suit='Tép')\n",
+      "Card(rank='K', suit='Zô')\n",
+      "Card(rank='K', suit='Cơ')\n",
+      "Card(rank='K', suit='Bích')\n",
+      "Card(rank='K', suit='Tép')\n",
+      "Card(rank='A', suit='Zô')\n",
+      "Card(rank='A', suit='Cơ')\n",
+      "Card(rank='A', suit='Bích')\n",
+      "Card(rank='A', suit='Tép')\n"
+     ]
+    }
+   ],
+   "source": [
+    "for card in deck: # doctest: +ELLIPSIS\n",
+    "    print(card)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Card(rank='A', suit='Tép')\n",
+      "Card(rank='A', suit='Bích')\n",
+      "Card(rank='A', suit='Cơ')\n",
+      "Card(rank='A', suit='Zô')\n",
+      "Card(rank='K', suit='Tép')\n",
+      "Card(rank='K', suit='Bích')\n",
+      "Card(rank='K', suit='Cơ')\n",
+      "Card(rank='K', suit='Zô')\n",
+      "Card(rank='Q', suit='Tép')\n",
+      "Card(rank='Q', suit='Bích')\n",
+      "Card(rank='Q', suit='Cơ')\n",
+      "Card(rank='Q', suit='Zô')\n",
+      "Card(rank='J', suit='Tép')\n",
+      "Card(rank='J', suit='Bích')\n",
+      "Card(rank='J', suit='Cơ')\n",
+      "Card(rank='J', suit='Zô')\n",
+      "Card(rank='10', suit='Tép')\n",
+      "Card(rank='10', suit='Bích')\n",
+      "Card(rank='10', suit='Cơ')\n",
+      "Card(rank='10', suit='Zô')\n",
+      "Card(rank='9', suit='Tép')\n",
+      "Card(rank='9', suit='Bích')\n",
+      "Card(rank='9', suit='Cơ')\n",
+      "Card(rank='9', suit='Zô')\n",
+      "Card(rank='8', suit='Tép')\n",
+      "Card(rank='8', suit='Bích')\n",
+      "Card(rank='8', suit='Cơ')\n",
+      "Card(rank='8', suit='Zô')\n",
+      "Card(rank='7', suit='Tép')\n",
+      "Card(rank='7', suit='Bích')\n",
+      "Card(rank='7', suit='Cơ')\n",
+      "Card(rank='7', suit='Zô')\n",
+      "Card(rank='6', suit='Tép')\n",
+      "Card(rank='6', suit='Bích')\n",
+      "Card(rank='6', suit='Cơ')\n",
+      "Card(rank='6', suit='Zô')\n",
+      "Card(rank='5', suit='Tép')\n",
+      "Card(rank='5', suit='Bích')\n",
+      "Card(rank='5', suit='Cơ')\n",
+      "Card(rank='5', suit='Zô')\n",
+      "Card(rank='4', suit='Tép')\n",
+      "Card(rank='4', suit='Bích')\n",
+      "Card(rank='4', suit='Cơ')\n",
+      "Card(rank='4', suit='Zô')\n",
+      "Card(rank='3', suit='Tép')\n",
+      "Card(rank='3', suit='Bích')\n",
+      "Card(rank='3', suit='Cơ')\n",
+      "Card(rank='3', suit='Zô')\n",
+      "Card(rank='2', suit='Tép')\n",
+      "Card(rank='2', suit='Bích')\n",
+      "Card(rank='2', suit='Cơ')\n",
+      "Card(rank='2', suit='Zô')\n"
+     ]
+    }
+   ],
+   "source": [
+    "for card in reversed(deck):\n",
+    "    print(card)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Card('Q', 'Zô') in deck"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Card('7', 'beasts') in deck"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Card(rank='2', suit='Tép')\n",
+      "Card(rank='2', suit='Bích')\n",
+      "Card(rank='2', suit='Cơ')\n",
+      "Card(rank='2', suit='Zô')\n",
+      "Card(rank='3', suit='Tép')\n",
+      "Card(rank='3', suit='Bích')\n",
+      "Card(rank='3', suit='Cơ')\n",
+      "Card(rank='3', suit='Zô')\n",
+      "Card(rank='4', suit='Tép')\n",
+      "Card(rank='4', suit='Bích')\n",
+      "Card(rank='4', suit='Cơ')\n",
+      "Card(rank='4', suit='Zô')\n",
+      "Card(rank='5', suit='Tép')\n",
+      "Card(rank='5', suit='Bích')\n",
+      "Card(rank='5', suit='Cơ')\n",
+      "Card(rank='5', suit='Zô')\n",
+      "Card(rank='6', suit='Tép')\n",
+      "Card(rank='6', suit='Bích')\n",
+      "Card(rank='6', suit='Cơ')\n",
+      "Card(rank='6', suit='Zô')\n",
+      "Card(rank='7', suit='Tép')\n",
+      "Card(rank='7', suit='Bích')\n",
+      "Card(rank='7', suit='Cơ')\n",
+      "Card(rank='7', suit='Zô')\n",
+      "Card(rank='8', suit='Tép')\n",
+      "Card(rank='8', suit='Bích')\n",
+      "Card(rank='8', suit='Cơ')\n",
+      "Card(rank='8', suit='Zô')\n",
+      "Card(rank='9', suit='Tép')\n",
+      "Card(rank='9', suit='Bích')\n",
+      "Card(rank='9', suit='Cơ')\n",
+      "Card(rank='9', suit='Zô')\n",
+      "Card(rank='10', suit='Tép')\n",
+      "Card(rank='10', suit='Bích')\n",
+      "Card(rank='10', suit='Cơ')\n",
+      "Card(rank='10', suit='Zô')\n",
+      "Card(rank='J', suit='Tép')\n",
+      "Card(rank='J', suit='Bích')\n",
+      "Card(rank='J', suit='Cơ')\n",
+      "Card(rank='J', suit='Zô')\n",
+      "Card(rank='Q', suit='Tép')\n",
+      "Card(rank='Q', suit='Bích')\n",
+      "Card(rank='Q', suit='Cơ')\n",
+      "Card(rank='Q', suit='Zô')\n",
+      "Card(rank='K', suit='Tép')\n",
+      "Card(rank='K', suit='Bích')\n",
+      "Card(rank='K', suit='Cơ')\n",
+      "Card(rank='K', suit='Zô')\n",
+      "Card(rank='A', suit='Tép')\n",
+      "Card(rank='A', suit='Bích')\n",
+      "Card(rank='A', suit='Cơ')\n",
+      "Card(rank='A', suit='Zô')\n"
+     ]
+    }
+   ],
+   "source": [
+    "suit_values = dict(Zô=3, Cơ=2, Bích=1, Tép=0)\n",
+    "\n",
+    "def spades_high(card):\n",
+    "    rank_value = FrenchDeck.ranks.index(card.rank)\n",
+    "    return rank_value * len(suit_values) + suit_values[card.suit]\n",
+    "\n",
+    "for card in sorted(deck, key=spades_high):\n",
+    "    print(card)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
