--- a/example_codes/fluent-python-c1-data-structures.ipynb
+++ b/example_codes/fluent-python-c1-data-structures.ipynb
@@ -387,10 +387,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import math \n",
+    "\n",
+    "class Vector:\n",
+    "    def __init__(self, x, y):\n",
+    "        self.x = x\n",
+    "        self.y = y \n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return f'Vector({self.x!r}, {self.y!r})' # !r để  biến self.x và self.y từ số thành string\n",
+    "    \n",
+    "    def __abs__(self):\n",
+    "        return math.hypot(self.x, self.y)\n",
+    "    \n",
+    "    def __bool__(self):\n",
+    "        return bool(abs(self))\n",
+    "    \n",
+    "    def __add__(self, other):\n",
+    "        x = self.x + other.x\n",
+    "        y = self.y + other.x \n",
+    "        return Vector(x, y)\n",
+    "    \n",
+    "    def __mul__(self, scalar):\n",
+    "        return Vector(self.x * scalar, self.y * scalar)\n"
+   ]
   },
   {
    "cell_type": "code",
