--- a/example_codes/neural_network_zero_to_hero/00_micrograd_from_scratch.ipynb
+++ b/example_codes/neural_network_zero_to_hero/00_micrograd_from_scratch.ipynb
@@ -3730,7 +3730,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "common",
+   "display_name": "nmt",
    "language": "python",
    "name": "python3"
   },
@@ -3744,7 +3744,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
