--- a/example_codes/neural_network_zero_to_hero/01_building_makemore_p1.ipynb
+++ b/example_codes/neural_network_zero_to_hero/01_building_makemore_p1.ipynb
@@ -6,6 +6,7 @@
    "source": [
     "## Makemore\n",
     "\n",
+    "- Bigrams method\n",
     "- Video: https://www.youtube.com/watch?v=PaCmpygFfXo&list=PLAqhIrjkxbuWI23v9cThsA9GvCAUhRvKZ&index=2\n",
     "- makemore on github: https://github.com/karpathy/makemore\n",
     "- jupyter notebook: https://github.com/karpathy/nn-zero-to-hero/blob/master/lectures/makemore/makemore_part1_bigrams.ipynb"
