--- a/example_codes/neural_network_zero_to_hero/01_building_makemore_p1.ipynb
+++ b/example_codes/neural_network_zero_to_hero/01_building_makemore_p1.ipynb
@@ -1482,7 +1482,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "common",
+   "display_name": "nmt",
    "language": "python",
    "name": "python3"
   },
@@ -1496,7 +1496,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
